updating sections with validations